--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
         <div class="card">
           <div class="avatar">CB</div>
           <h3>Cristel Jane Baquing</h3>
-          <p>Role</p>
+          <p>Project Manager</p>
         </div>
         <div class="card">
           <div class="avatar">AJ</div>
           <h3>Angelica Jean Evangelista</h3>
-          <p>Role</p>
+          <p>Documentation Specialist</p>
         </div>
         <div class="card">
           <div class="avatar">JL</div>
           <h3>James Tristan Landa</h3>
-          <p>Role</p>
+          <p>Front-End Developer</p>
         </div>
         <div class="card">
           <div class="avatar">KV</div>
           <h3>Kharl Chester Velasco</h3>
-          <p>Role</p>
+          <p>Lead Developer</p>
         </div>
       </div>
     </div>
