add comemnt guides

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
         <li><a href="#hero">Home</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#tool">Tool</a></li>
+        <li><a href="#instructions">How to Use</a></li>
         <li><a href="#about">About Us</a></li>
       </ul>
     </div>
@@ -71,6 +72,36 @@
       </div>
     </div>
   </section>
+
+  <!-- Instructions Section -->
+  <section id="instructions">
+  <div class="container">
+    <h2>How to Use the Tool</h2>
+    <div class="instructions-content">
+      <div class="instruction-step">
+        <div class="step-number">1</div>
+        <h3>Enter a Review</h3>
+        <p>Type or paste an English product review into the textbox under <strong>Product Review Detection</strong>.</p>
+      </div>
+      <div class="instruction-step">
+        <div class="step-number">2</div>
+        <h3>Submit</h3>
+        <p>Click the <strong>Submit</strong> button to process your review.</p>
+      </div>
+      <div class="instruction-step">
+        <div class="step-number">3</div>
+        <h3>Accept Terms</h3>
+        <p>Accept the terms and conditions in the pop-up modal window to proceed.</p>
+      </div>
+      <div class="instruction-step">
+        <div class="step-number">4</div>
+        <h3>View Results</h3>
+        <p>The tool will show if the review is <strong>normal</strong> or <strong>suspicious</strong> after a few seconds.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- About Section -->
   <section id="about">
