--- a/frontend/index.html
+++ b/frontend/index.html
@@ -155,61 +155,68 @@
         <div class="instruction-step">
           <div class="step-number">5</div>
           <h3>Feature Criteria</h3>
-          <p>
-            Each feature shows <strong>Value</strong>, a <strong>Criteria</strong> range, and a <strong>Status</strong> badge. "Pass" means typical; "Warning" highlights unusual values.
-          </p>
+          <div class="feature-criteria-content">
+            <p>
+              Each feature shows <strong>Value</strong>, a <strong>Criteria</strong> range, and a <strong>Status</strong> badge. "Pass" means typical; "Warning" highlights unusual values.
+            </p>
+            <button id="feature-learn-more">Hide Features</button>
+          </div>
+          <div id="feature-glossary" class="feature-glossary">
+            <div class="feature-glossary-container">
+              <h3>Feature Glossary</h3>
+              <div class="feature-details">
+                <div class="feature-detail">
+                  <h4>Length of review</h4>
+                  <p>How many words are in the review. Very short reviews can look suspicious.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Word variety</h4>
+                  <p>How varied the words are. More unique words usually mean a more natural review.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Average word length</h4>
+                  <p>Average number of letters per word. Extremely short or long words can be unusual.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Overall tone</h4>
+                  <p>Overall positivity or negativity. Extremely high or low values can be unnatural.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Opinion level</h4>
+                  <p>How opinion-based the review is. Very subjective without details can be suspicious.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Language complexity</h4>
+                  <p>How complex or varied the wording is. Low complexity may indicate template-like text.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Word repetition</h4>
+                  <p>How often words are repeated. High repetition is common in fake reviews.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Exclamation marks</h4>
+                  <p>How many exclamation marks are used. Too many can be a red flag.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Question marks</h4>
+                  <p>How many question marks are used. Unusual punctuation patterns can be suspicious.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Capital letter usage</h4>
+                  <p>How much of the text is CAPITALIZED. Excessive caps can look promotional.</p>
+                </div>
+                <div class="feature-detail">
+                  <h4>Punctuation density</h4>
+                  <p>How dense the punctuation is. Unusual patterns can be a signal.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <p style="margin-top: 18px; text-align: center;" class="result-hint">
         Tip: Hover the <strong>?</strong> icons in the <strong>Results</strong> to see simple explanations of each feature.
       </p>
-
-      <h2 id="feature-glossary" style="margin-top: 40px;">Feature Glossary</h2>
-      <div class="instructions-content">
-        <div class="instruction-step">
-          <h3>Length of review</h3>
-          <p>How many words are in the review. Very short reviews can look suspicious.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Word variety</h3>
-          <p>How varied the words are. More unique words usually mean a more natural review.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Average word length</h3>
-          <p>Average number of letters per word. Extremely short or long words can be unusual.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Overall tone</h3>
-          <p>Overall positivity or negativity. Extremely high or low values can be unnatural.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Opinion level</h3>
-          <p>How opinion-based the review is. Very subjective without details can be suspicious.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Language complexity</h3>
-          <p>How complex or varied the wording is. Low complexity may indicate template-like text.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Word repetition</h3>
-          <p>How often words are repeated. High repetition is common in fake reviews.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Exclamation marks</h3>
-          <p>How many exclamation marks are used. Too many can be a red flag.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Question marks</h3>
-          <p>How many question marks are used. Unusual punctuation patterns can be suspicious.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Capital letter usage</h3>
-          <p>How much of the text is CAPITALIZED. Excessive caps can look promotional.</p>
-        </div>
-        <div class="instruction-step">
-          <h3>Punctuation density</h3>
-          <p>How dense the punctuation is. Unusual patterns can be a signal.</p>
-        </div>
       </div>
     </div>
   </section>
