fix: update job titles in team member section of index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -239,7 +239,7 @@
         <div class="card">
           <div class="avatar">CB</div>
           <h3>Cristel Jane Baquing</h3>
-          <p>Project Manager</p>
+          <p>Project Manager/Lead Developer</p>
         </div>
         <div class="card">
           <div class="avatar">AJ</div>
@@ -249,12 +249,12 @@
         <div class="card">
           <div class="avatar">JL</div>
           <h3>James Tristan Landa</h3>
-          <p>Front-End Developer</p>
+          <p>Backend Developer</p>
         </div>
         <div class="card">
           <div class="avatar">KV</div>
           <h3>Kharl Chester Velasco</h3>
-          <p>Lead Developer</p>
+          <p>Frontend Developer</p>
         </div>
       </div>
     </div>
