Revert "refactor: simplify instructions and enhance feature criteria descriptions for clarity"
This reverts commit a5a7d8e043658030d02571e7a99aeff9901a560c.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -182,6 +182,20 @@ Data Structures, Algorithms, and Control:
           </p>
         </div>
         <div class="instruction-step">
+          <div class="step-number">2</div>
+          <h3>Confidence</h3>
+          <p>
+            A higher percentage means the model is more certain. Low confidence usually means the review is near the decision boundary.
+          </p>
+        </div>
+        <div class="instruction-step">
+          <div class="step-number">3</div>
+          <h3>Margin</h3>
+          <p>
+            Margin is the difference between the review's distance and the threshold. Larger positive margins indicate stronger anomalies.
+          </p>
+        </div>
+        <div class="instruction-step">
           <div class="step-number">4</div>
           <h3>Key Warning Signs</h3>
           <p>
@@ -193,8 +207,8 @@ Data Structures, Algorithms, and Control:
           <h3>Feature Criteria</h3>
           <div class="feature-criteria-content">
             <p>
-              Each feature shows a <strong>Status</strong> badge.
-              "Normal" means typical; "Unusual" highlights unusual values.
+              Each feature shows <strong>Value</strong>, a <strong>Criteria</strong> range, and a <strong>Status</strong> badge.
+              "Pass" means typical; "Warning" highlights unusual values.
             </p>
 
             <div class="feature-learn-more-wrapper">
@@ -255,7 +269,7 @@ Data Structures, Algorithms, and Control:
         </div>
       </div>
       <p style="margin-top: 18px; text-align: center;" class="result-hint">
-        Tip: Hover the <strong>?</strong> icons in the <strong>Results</strong> to easily see the explanations of each feature.
+        Tip: Hover the <strong>?</strong> icons in the <strong>Results</strong> to see simple explanations of each feature.
       </p>
       </div>
     </div>
