--- a/frontend/index.html
+++ b/frontend/index.html
@@ -366,9 +366,10 @@ Data Structures, Algorithms, and Control:
           <li>Text in Tagalog or other non-English languages</li>
           <li>Random letters or gibberish (e.g., "kjashduikqweha")</li>
           <li>Meaningless character sequences</li>
+          <li>Reviews exceeding 200 words</li>
         </ul>
         <p style="margin: 8px 0 0 0; color: #666; font-size: 0.9rem;">
-          <strong>Please enter a valid English product review.</strong>
+          <strong>Please enter a valid English product review (maximum 200 words).</strong>
         </p>
       </div>
       <div class="modal-buttons">
