refine input requirements for product reviews in frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,8 +127,7 @@ Data Structures, Algorithms, and Control:
             <div class="info-content">
               <strong>Valid Input Requirements:</strong>
               <ul>
-                <li>English language only (Tagalog and other languages are not supported)</li>
-                <li>Meaningful text (random letters or gibberish will be rejected)</li>
+                <li>English language product reviews only</li>
                 <li>Maximum 200 words</li>
               </ul>
             </div>
@@ -350,8 +349,6 @@ Data Structures, Algorithms, and Control:
         <p style="margin: 0 0 8px 0; font-weight: 600; color: #e65100;">What makes input invalid?</p>
         <ul style="margin: 0; padding-left: 20px; color: #666; font-size: 0.9rem;">
           <li>Text in Tagalog or other non-English languages</li>
-          <li>Random letters or gibberish (e.g., "kjashduikqweha")</li>
-          <li>Meaningless character sequences</li>
           <li>Reviews exceeding 200 words</li>
         </ul>
         <p style="margin: 8px 0 0 0; color: #666; font-size: 0.9rem;">
